src/test/ui/macros/macro-use-bad-args-1.stderr
error[E0466]: bad macro import
  --> $DIR/macro-use-bad-args-1.rs:4:13
   |
LL | #[macro_use(foo(bar))]
   |             ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0466`.
